Edited from home
10:18PM
10/7/24

--- a/angularproject1/src/app/createlocation/createlocation.component.html
+++ b/angularproject1/src/app/createlocation/createlocation.component.html
@@ -1,5 +1,4 @@
-<p>createlocation works!</p>
-
+<h1 class="text-center text-info mt-2">Input Your Data</h1>
 <div class="container">
     <form [formGroup]="fromValue">
 
