--- a/angularproject1/src/app/updatelocation/updatelocation.component.html
+++ b/angularproject1/src/app/updatelocation/updatelocation.component.html
@@ -34,7 +34,7 @@
         </div>
 
     
-        <button type="submit" class="btn btn-primary" (click)="updateLocation()" >Submit</button>
+        <button type="submit" class="btn btn-primary" >Submit</button>
     </form>
 
 </div>
