--- a/angularproject1/src/app/app.component.html
+++ b/angularproject1/src/app/app.component.html
@@ -24,7 +24,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link ">Enable</a>
+          <a class="nav-link " href="/createstudent">Create student</a>
         </li>
       </ul>
       <form class="d-flex" role="search" >
