--- a/angularproject1/src/app/student/createstudent/createstudent.component.html
+++ b/angularproject1/src/app/student/createstudent/createstudent.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form [formGroup]="studentFrom">
+    <form [formGroup]="studentFrom" (ngSubmit)="createStudent()">
 
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Name</label>
@@ -18,18 +18,17 @@
         </div>
        
        
-        <div class="mb-3">
+        <div class="mb-3" formGroupName="location">
+            <div class="invalid-feedback">Please select a generic.</div>
             <label for="location" class="form-label">Location:</label>
-            <select id="location" formControlName="location" class="form-select" required>
+            <select id="location" formControlName="name" class="form-select" required>
               <option *ngFor="let loc of locations" [ngValue]="loc.name">{{loc.name}}</option>
             </select>
-            <div class="invalid-feedback">Please select a generic.</div>
+            
           </div>
 
-
-
-    
-        <button type="submit" class="btn btn-primary" (click)=" createStudent()">Submit</button>
+   
+        <button type="submit" class="btn btn-primary" >Submit</button>
     </form>
 
 </div>
