updated from tsp
3:16PM

--- a/angularproject1/src/app/student/viewstudent/viewstudent.component.html
+++ b/angularproject1/src/app/student/viewstudent/viewstudent.component.html
@@ -6,7 +6,7 @@
     <thead>
     <tr>
        
-        <th>Name</th>
+        <th class="me-auto">Name</th>
         <th>Email</th>
         <th>Cell</th>
         <th>Location Name</th>
@@ -26,7 +26,7 @@
     <td>{{stu.cellNo}}</td>
     <td>{{stu.location.name}}</td>
     <td>{{stu.location.city}}</td>
-    <td><img [src]="stu.location.photo" alt="{{stu.location.name}}" style="width: 50px; height: auto;"></td>
+    <td><img [src]="stu.location.photo" alt="{{stu.location.name}}" style="width: 100px; height: auto;"></td>
     
 
 
