--- a/angularproject1/src/app/student/viewstudent/viewstudent.component.html
+++ b/angularproject1/src/app/student/viewstudent/viewstudent.component.html
@@ -6,13 +6,13 @@
     <thead>
     <tr>
        
-        <th class="me-auto">Name</th>
+        <th>Name</th>
         <th>Email</th>
         <th>Cell</th>
         <th>Location Name</th>
         <th>City</th>
-        <th>Photo</th> 
-        <th >Action</th>
+        <th >Photo</th> 
+        <th class="">Action</th>
         
        
     </tr>
