--- a/angularproject1/src/app/student/updatestudent/updatestudent.component.html
+++ b/angularproject1/src/app/student/updatestudent/updatestudent.component.html
@@ -18,7 +18,7 @@
 
         <div class="mb-3">
             <label for="location" class="form-label">Location:</label>
-            <select id="location" formControlName="location" class="form-select">
+            <select id="location" formGroupName="location" class="form-select">
                 <option *ngFor="let loc of locations" [ngValue]="loc">{{ loc.name }}</option>
             </select>
         </div>
