--- a/angularproject1/src/app/app.component.html
+++ b/angularproject1/src/app/app.component.html
@@ -41,10 +41,10 @@
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="true" href="#">Active</a>
+        <a class="nav-link active" aria-current="true" href="reg">Registration</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
