--- a/angularproject1/src/app/registration/registration.component.html
+++ b/angularproject1/src/app/registration/registration.component.html
@@ -13,6 +13,10 @@
         <label for="password" class="form-label">Password</label>
         <input type="password" id="password" formControlName="password" class="form-control" required="required">
       </div>
+      <div class="mb-3">
+        <label for="photo" class="form-label">Photo</label>
+        <input type="file" class="form-control" formControlName="photo">
+    </div>
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </div>
