--- a/angularproject1/src/app/login/login.component.html
+++ b/angularproject1/src/app/login/login.component.html
@@ -1,14 +1,31 @@
-<div class="container">
-    <h2>Login</h2>
-    <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" formControlName="email" class="form-control">
+<div class="container px-4 py-3">
+  <h2>Login</h2>
+  <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
+    <div class="mb-3 ">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" id="email" formControlName="email" class="form-control" placeholder="email@example.com">
+    </div>
+    <div class="mb-3 ">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" id="password" formControlName="password" class="form-control" placeholder="Password">
+    </div>
+
+    <div class="mb-3">
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="dropdownCheck">
+        <label class="form-check-label" for="dropdownCheck">
+          Remember me
+        </label>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" formControlName="password" class="form-control">
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-  </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+
+
+  </form>
+
+
+</div>
+
+
+
+
