--- a/angularproject1/src/app/student/updatestudent/updatestudent.component.html
+++ b/angularproject1/src/app/student/updatestudent/updatestudent.component.html
@@ -24,7 +24,7 @@
         </div> -->
         <div class="mb-3">
             <label for="location" class="form-label">Location:</label>
-            <select id="location"  class="form-select"  formGroupName="location"  [formControlName]="locations">
+            <select id="location"  class="form-select"  formGroupName="location"  formControlName="location">
                 <option *ngFor="let loc of locations" [ngValue]="loc">{{ loc.name }}</option>
             </select>
         </div>
