--- a/angularproject1/src/app/userprofile/userprofile.component.html
+++ b/angularproject1/src/app/userprofile/userprofile.component.html
@@ -4,6 +4,7 @@
       <img [src]="user.photo" alt="{{user.photo}}" style="width: 100px; height: auto;">
       <p><strong>Name:</strong> {{ user.name }}</p>
       <p><strong>Email:</strong> {{ user.email}}</p>
+      <p><strong>Role:</strong> {{ user.role}}</p>
 
     </div>
     <div *ngIf="!user">
