--- a/angularproject1/src/app/createlocation/createlocation.component.html
+++ b/angularproject1/src/app/createlocation/createlocation.component.html
@@ -1,5 +1,6 @@
 <h1 class="text-center text-info mt-2">Input Your Data</h1>
 <div class="container">
+    <h1>Add Location Information</h1>
     <form [formGroup]="fromValue">
 
         <div class="mb-3 ">
