--- a/angularproject1/src/app/navbar/navbar.component.html
+++ b/angularproject1/src/app/navbar/navbar.component.html
@@ -1,17 +1,17 @@
-<nav class=" navbar navbar-dark bg-primary navbar-expand-lg" data-bs-theme="dark" >
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          </li>
-          <ng-container *ngIf="userRole === 'Admin'">
+<nav class=" navbar navbar-dark bg-primary navbar-expand-lg" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/home">Home</a>
+        </li>
+        <!-- <ng-container *ngIf="userRole === 'Admin'">
 
-            
             <li class="nav-item">
               <a class="nav-link" href="/createlocation" >Create Location</a>
             </li>
@@ -21,44 +21,57 @@
             </li>
 
 
-      </ng-container>
-      <ng-container *ngIf="userRole === 'User'">
+            </ng-container>
+           <ng-container *ngIf="userRole === 'User'">
 
-          <li class="nav-item">
+           <li class="nav-item">
               <a class="nav-link" href="/location" >Location</a>
             </li>
             
             <li class="nav-item">
               <a class="nav-link" href="/student" >Student</a>
             </li>
-           
+
+           </ng-container> -->
 
 
-      </ng-container>
+        <li class="nav-item">
+          <a class="nav-link" href="/location">Location</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/student">Student</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/employee">Employee</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="/createlocation">Create Location</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="/createstudent">Create student</a>
+        </li>
 
-
-          <li class="nav-item">
-            <a class="nav-link" href="/location">Location</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              All Options
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/student">Student</a></li>
-              <li><a class="dropdown-item" href="employee">Employee</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="createlocation">Create Location</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="/createstudent">Create student</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search" >
-          <input class="form-control me-2 btn btn-outline-light" type="search" placeholder="Search" aria-label="Search" data-bs-theme="dark">
-          <button class="btn btn-outline-light"  type="submit">Search</button>
-        </form>
-      </div>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            All Options
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/location">Location</a></li>
+            <li><a class="dropdown-item" href="/student">Student</a></li>
+            <li><a class="dropdown-item" href="/employee">Employee</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="/createlocation">Create Location</a></li>
+            <li><a class="dropdown-item" href="/createstudent">Create student</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2 btn btn-outline-light" type="search" placeholder="Search" aria-label="Search"
+          data-bs-theme="dark">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
