--- a/country_test/src/app/components/country/country.component.html
+++ b/country_test/src/app/components/country/country.component.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <h3>Country List</h3>
+    <h3 class="mt-4 text-center mb-4">Country List</h3>
     <table class="table table-striped">
         <thead>
             <tr>
